# econ

./: .gitignore  PROJECT.md  conductor.json  pyproject.toml
app/: agent.py  config.py  engine.py  events.py  main.py  models.py  prompts.py  save.py  tools.py  tui.py
tests/: conftest.py  test_integration.py
