[project]
name = "econ-sim"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.86",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.scripts]
econ-sim = "app.main:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
